Asserções de Exceptions, listas e agrupadas

--- a/curso-testes-unitarios-junit-projeto-main/pom.xml
+++ b/curso-testes-unitarios-junit-projeto-main/pom.xml
@@ -43,6 +43,10 @@
 					</archive>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+			</plugin>
 		</plugins>
 	</build>
 
